[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/menu_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/star.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/level_button.gd" type="Script" id=3]
[ext_resource path="res://assets/buttons/normal_level_button.tres" type="StyleBox" id=4]

[sub_resource type="Theme" id=1]

[node name="level_button" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1040.0
margin_bottom = -480.0
theme = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_label" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -90.0
margin_right = 90.0
margin_bottom = 289.0
text = "0
"
font_size = 0

[node name="star1" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -96.0
margin_right = 32.0
margin_bottom = -35.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = -35.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -96.0
margin_right = -32.0
margin_bottom = -35.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
